Adding required to every input

--- a/jobApp.html
+++ b/jobApp.html
@@ -45,18 +45,18 @@
             </div>
             <div>
                 <label style="padding-right: 70px;">Name</label>
-                <input type="text" id="fname" placeholder="First Name">
-                <input type="text" id="lname" placeholder="Last Name">
+                <input type="text" id="fname" placeholder="First Name" required>
+                <input type="text" id="lname" placeholder="Last Name" required>
             </div>
             <br>
             <div>
                 <label for="email" style="padding-right: 72px;">Email</label>
-                <input type="text" id="fname" placeholder="user@example.com">
+                <input type="text" id="fname" placeholder="user@example.com" required>
             </div>   
             <br>
             <div>
                 <label for="education" style="padding-right: 40px;">Education</label>
-                <select style="height: 20px; width: 200px;" id="uni" name="university">
+                <select style="height: 20px; width: 200px;" id="uni" name="university" required>
                     <option value="fastu">Please Choose</option>
                     <option value="fastu">FAST-NUCES</option>
                     <option value="pucit">PUCIT</option>
@@ -67,17 +67,17 @@
             <br>
             <div>
                 <label style="padding-right: 50px;" for="resume">Resume</label>
-                <input type="file" id="fileInput" name="fileInput">
+                <input type="file" id="fileInput" name="fileInput" required>
             </div>
             <br>
             <div>
                 <label style="padding-right: 50px;" for="address">Address</label>
-                <input type="text" id="address1" placeholder="Address 1">
-                <input type="text" id="address2" placeholder="Address 2">
+                <input type="text" id="address1" placeholder="Address 1" required>
+                <input type="text" id="address2" placeholder="Address 2" required>
             </div>
             <div>
                 <label style="padding-right: 110px;"></label>
-                <select style="height: 20px; width: 200px; margin-bottom: 10px;" id="country" name="country">
+                <select style="height: 20px; width: 200px; margin-bottom: 10px;" id="country" name="country" required>
                     <option value="" disabled selected>Select a country</option>
                     <option value="usa">USA</option>
                     <option value="canada">Canada</option>
@@ -87,21 +87,21 @@
             </div>
             <div>
                 <label style="padding-right: 110px;"></label>
-                <input type="text" id="city" placeholder="City" style="width: 35%;">
-                <input type="text" id="state" placeholder="State" style="width: 15%;">
-                <input type="text" id="zip" placeholder="ZipCode" style="width: 15%;">
+                <input type="text" id="city" placeholder="City" style="width: 35%;" required>
+                <input type="text" id="state" placeholder="State" style="width: 15%;" required>
+                <input type="text" id="zip" placeholder="ZipCode" style="width: 15%;" required>
             </div>
             <br>
             <div>
                 <label style="padding-right: 3px;" for="pnum">Phone Number</label>
-                <input style="width: 10%;" type="tel" id="pnum" name="phoneNum">
-                <input style="width: 50%;" type="tel" id="pnum2" name="phoneNum2">
+                <input style="width: 10%;" type="tel" id="pnum" name="phoneNum" required>
+                <input style="width: 50%;" type="tel" id="pnum2" name="phoneNum2" required>
             </div>
             <br>
             <div>
                 <label style="padding-right: 50px;" for="hobbies">What are your hobbies?</label>
                 <br>
-                <input type="text" id="hobbies1" style="width: 100%;">
+                <input type="text" id="hobbies1" style="width: 100%;" required>
             </div>
         </div>
         <div>
@@ -111,17 +111,17 @@
             <br>
             <div>
                 <label for="Company Name" style="padding-right: 2px;">Company Name</label>
-                <input type="text" id="fname" style="width: 70%;">
+                <input type="text" id="fname" style="width: 70%;" required>
             </div>
             <br>
             <div>
                 <label for="jTitle" style="padding-right: 60px;" >Job Title</label>
-                <input type="text" id="jTit" style="width: 70%;">
+                <input type="text" id="jTit" style="width: 70%;" required>
             </div>   
             <br>
             <div>
                 <label for="experience" style="padding-right: 70px; width: 110px ">Tenure</label>
-                <input type="text" for="experience" style="width: 70%;" >
+                <input type="text" for="experience" style="width: 70%;" required>
             </div>
             <br>
         </div> 
@@ -131,11 +131,11 @@
             </div>
             <div>
                 <label for="name" style="padding-right: 75px; ">Name</label>
-                <input type="text" id="name" style="width: 70%;">
+                <input type="text" id="name" style="width: 70%;" required>
             </div>
             <div>
                 <label for="Phone" style="padding-right: 72px;">Phone</label>
-                <input type="tel" id="contact" style="width: 70%;">
+                <input type="tel" id="contact" style="width: 70%;" required>
             </div>
         </div>  
         <br>
@@ -145,11 +145,11 @@
             </div>
             <div>
                 <label for="name" style="padding-right: 75px; ">Name</label>
-                <input type="text" id="name" style="width: 70%;">
+                <input type="text" id="name" style="width: 70%;" required>
             </div>
             <div>
                 <label for="Phone" style="padding-right: 72px;">Phone</label>
-                <input type="tel" id="contact" style="width: 70%;">
+                <input type="tel" id="contact" style="width: 70%;" required>
             </div>
         </div>  
         <br>
